@@ -106,13 +106,11 @@
 # define PRINTFFORMAT(si, tc) __attribute__((format(printf,si,tc)))
 # define NONRETURNING __attribute__((noreturn))
 # define UNUSED __attribute__((unused))
-# define NONRETURNPRINTFFORMAT(si, tc) __attribute__((format(printf,si,tc),noreturn))
 #else
 # define CONSTANT
 # define PRINTFFORMAT(si, tc)
 # define NONRETURNING
 # define UNUSED
-# define NONRETURNPRINTFFORMAT(si, tc)
 #endif
 
 static int testmode = 0;
@@ -180,7 +178,7 @@ static int pid_is_exec(pid_t pid, const struct stat *esb);
 
 #ifdef __GNUC__
 static void fatal(const char *format, ...)
-	NONRETURNPRINTFFORMAT(1, 2);
+	NONRETURNING PRINTFFORMAT(1, 2);
 static void badusage(const char *msg)
 	NONRETURNING;
 #else
