@@ -1,3 +1,14 @@
+2008-01-02  Guillem Jover  <guillem@debian.org>
+
+	* lib/dpkg.h (NONRETURNPRINTFFORMAT): Remove macro.
+	(ohshit): Use NONRETURNING and PRINTFFORMAT instead of
+	NONRETURNPRINTFFORMAT.
+	(ohshite): Likewise.
+	(badusage): Likewise.
+	* utils/start-stop-daemon.c (NONRETURNPRINTFFORMAT): Remove macro.
+	(fatal): Use NONRETURNING and PRINTFFORMAT instead of
+	NONRETURNPRINTFFORMAT.
+
 2008-01-01  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-buildpackage.pl: Use Dpkg::Compression. Use $comp_regex
